--- a/css/ghq.css
+++ b/css/ghq.css
@@ -221,12 +221,27 @@ input:focus {
     border: none;
     color: #fff;
     margin-top: 20px;
-    font-weight: 700
+    margin-bottom: 2px;
+    height: 40px;
+    font-weight: 900;
+    animation: cria 1s linear 0s infinite alternate;
+}
+@keyframes cria {
+  0% {
+    background:#36a420;
+  }
+  100% {
+    background:#3D6AD6;
+  }
 }
 
+.btnn span {
+  font-size: 12px;
+  opacity: 0.7
+}
 .criar:hover,
 .criar:focus {
-  background: #31931d
+  background: #31931d!important
 }
 .content-flex {
     width: 100%;
