--- a/css/ghq.css
+++ b/css/ghq.css
@@ -286,6 +286,11 @@ input:focus {
     box-shadow: 0px 1px 1px 1px #d0d1d5;
     border-radius: 3px
 }
+.foto-perfil22 {
+    background: #3d6ad6;
+    width: 50px;
+    height: 50px;
+}
 .fFotoPerfil {
   width: 170px;
   height: 170px;
