--- a/css/ghq.css
+++ b/css/ghq.css
@@ -18,6 +18,37 @@ body {
   margin: 0;
   padding: 0;
 }
+.um {
+  font-weight: 900;
+  font-size: 22px;
+}
+.coment-post1 {
+  width: 100%;
+  margin-top: 10px;
+}
+.ta {
+  overflow-x:visible;
+}
+.coment1 {
+  width: 100%;
+  background: green
+}
+.16 {
+  font-size: 16
+}
+.bold {
+  font-weight: 900;
+}
+.cazul {
+  color: #3D6AD6
+}
+.edit {
+  border:none;
+  background: transparent;
+  width: 100%;
+  max-width: 100%;
+  opacity: 0.7
+}
 .top {
     width: 100%;
     background: #3B5998;
@@ -300,8 +331,9 @@ input:focus {
 .fFotoCapa {
   width: 815px;
   max-width: 100%;
-  height: 310px;
+  height: 312px;
   z-index: 99;
+  border: none
 }
 .oito {
     width: 100%;
