--- a/css/ghq.css
+++ b/css/ghq.css
@@ -75,21 +75,29 @@ input:focus {
     margin-left: 10px;
 }
 .pad {
-  position: absolute;
-  top:4px;
-  right: 4px;
+  padding-top: 4px;
 }
 .po {
-    background: #fff;
     border-radius: 2px;
-    width: 70%;
-    text-align: left;
+    max-width: 100%;
+    width: 300px;
+    background: #fff;
+    text-align: center;
+    display: flex
+}
+.pes {
+  width: 10%;
+  float: right;
+}
+.ppe {
+  width: 90%;
 }
 .pes img {
     padding-top: 10 px;
+    float: right;
 }
 .po input {
-    width: 90%;
+    width: 100%;
     background: transparent;
     border: none;
     height: 23px;
@@ -248,14 +256,15 @@ input:focus {
     opacity: 0.9
 }
 .criar {
-    background: #36a420;
+    /*background: #36a420;*/
+    background: linear-gradient(to left, #de6161 , #2657eb);
     border: none;
     color: #fff;
     margin-top: 20px;
     margin-bottom: 2px;
     height: 40px;
     font-weight: 900;
-    animation: cria 1s linear 0s infinite alternate;
+    /*animation: cria 1s linear 0s infinite alternate;*/
 }
 @keyframes cria {
   0% {
@@ -334,6 +343,44 @@ input:focus {
   height: 312px;
   z-index: 99;
   border: none
+}
+.relaviso {
+  width: 100%;
+  height: 40px;
+  position: relative;
+}
+.fixaviso {
+  width: 100%;
+  position: fixed;
+  height: 40px;
+  z-index: 99;
+}
+.avi {
+  background: linear-gradient(to left, #de6161 , #2657eb);
+  display: flex;
+  justify-content: center;
+  height: 40px;
+  align-items: center;
+  color: #fff;
+  font-size: 12px;
+  font-weight: 900
+}
+
+.ll {
+  width: 90%;
+}
+.lr {
+  width: 10%;
+}
+.alertf {
+  background: transparent;
+  border:none;
+  opacity: 0.6
+}
+.alertf:hover {
+  background: transparent;
+  border:none;
+  opacity: 1
 }
 .oito {
     width: 100%;
@@ -763,7 +810,7 @@ button:hover {
     width: 100%
 }
 .rodape {
-    background: #3D6AD6;
+    background: linear-gradient(to left, #de6161 , #2657eb);
     color: #fff;
     width: 100%;
     padding-top: 20px;
