--- a/css/ghq.css
+++ b/css/ghq.css
@@ -75,12 +75,12 @@ input:focus {
     margin-left: 10px;
 }
 .pad {
-  padding-top: 4px;
+  padding-top: 5px;
+  background: #fff
 }
 .po {
     border-radius: 2px;
     max-width: 100%;
-    width: 300px;
     background: #fff;
     text-align: center;
     display: flex
@@ -929,6 +929,8 @@ img {
     width: 340px;
     max-width: 100%;
     margin: 0 auto;
+    margin-top: 10px;
+    margin-bottom: 10px;
   }
   .content-l {
     width: 100%;
