--- a/css/ghq.css
+++ b/css/ghq.css
@@ -25,6 +25,16 @@ body {
   max-width: 100%;
   height: auto;
 }
+.cccf {
+  width: 200px;
+}
+.backgroundDiv {
+  width: 100%;
+  height: 100px;
+  background: red;
+  background-position: center;
+  background-size: cover
+}
 .cropcapa {
   clip: rect(0px, 828px, 315px, 0px);
   position: absolute;
@@ -401,6 +411,12 @@ input:focus {
     height: 315px;
     width: 100%;
     background: #3d6ad6;
+    overflow: hidden;
+}
+
+.thumb-image {
+  width: 100%;
+  height: auto;
 }
 .cem {
     width: 100%;
@@ -943,6 +959,10 @@ img {
 }
 
 @media only screen and (max-width: 500px) {
+  .thumb-image {
+    width: 100%;
+    height: 315px;
+  }
   .respp {
     display: block
   }
@@ -968,6 +988,7 @@ img {
     display: none
   }
 
+
   .ii {
     width: 100%;
     height: 475px;
@@ -978,7 +999,7 @@ img {
     min-width: 100%;
   }
   .capa {
-      height: 475px;
+      height: 315px;
       width: 100%;
   }
 
