--- a/css/ghq.css
+++ b/css/ghq.css
@@ -959,6 +959,9 @@ img {
 }
 
 @media only screen and (max-width: 500px) {
+  .itemdd {
+    width:100%
+  }
   .thumb-image {
     width: 100%;
     height: 255px;
