--- a/css/insta.css
+++ b/css/insta.css
@@ -113,6 +113,7 @@ footer {
   font-size: 12px;
   color: #003569;
   font-weight: 900;
+  padding-bottom: 50px;
 }
 .rodape ul {
   list-style: none;
@@ -263,7 +264,7 @@ footer {
 .salvar {
   z-index: 99;
   position: fixed;
-  background: linear-gradient(to bottom, rgba(0, 0, 0, 0) , #FFFFFF);
+  background: linear-gradient(to bottom, rgba(0, 0, 0, 0) , rgba(255, 255, 255, 0.5));
   bottom: 0;
   width: 100%;
   text-align: center;
