--- a/css/insta.css
+++ b/css/insta.css
@@ -192,6 +192,12 @@ footer {
   border:none;
   font-size: 28px;
 }
+.avvv {
+  color: #fff!important;
+}
+.whi {
+  color: #fff!important;
+}
 .p1 {
     display: inline-block;
     overflow: hidden;
