--- a/css/insta.css
+++ b/css/insta.css
@@ -306,7 +306,7 @@ img {
   position: relative;
 }
 .s {
-  height: 100px;
+  height: 50px;
 }
 .criar {
     background: #36a420;
@@ -315,20 +315,27 @@ img {
     color: #fff;
     height: 40px;
     font-weight: 900;
-    width: 500px;
+    width: 200px;
     max-width: 90%;
-    margin-top: 55px;
+    margin-top: 0px;
     border-radius: 4px;
     cursor: pointer;
+    margin-right: 10px;
+      box-shadow: 0px 0px 20px 1px rgba(0, 0, 0, 0.3);
+      transition: 1s;
     /*animation: cria 1s linear 0s infinite alternate;*/
+}
+.criar:hover {
+  background: #3C8A2D!important
 }
 .salvar {
   z-index: 99;
   position: fixed;
-  background: linear-gradient(to bottom, rgba(0, 0, 0, 0) , rgba(255, 255, 255, 0.5));
+  background: rgba(255, 255, 255, 0));
+
   bottom: 0;
   width: 100%;
-  text-align: center;
+  text-align: right;
 }
 .relaviso {
   width: 100%;
