--- a/css/face.css
+++ b/css/face.css
@@ -1025,6 +1025,18 @@ img {
     .ewa {
       order:2
     }
+    .respp {
+      display: block;
+      width: 100%;
+      min-width: 500px;
+    }
+    .oaaa {
+      display: none
+    }
+    .oaa {
+      display: block
+    }
+
 }
 
 @media only screen and (max-width: 500px) {
@@ -1035,23 +1047,9 @@ img {
     width: 100%;
     height: 255px;
   }
-  .respp {
-    display: block
-  }
-  .oaa {
-    display: block
-  }
 
-  .oaaa {
-    display: none
-  }
-  .criar {
-    width: 340px;
-    max-width: 100%;
-    margin: 0 auto;
-    margin-top: 10px;
-    margin-bottom: 10px;
-  }
+
+
   .content-l {
     width: 100%;
     margin: 0 auto
