--- a/css/face.css
+++ b/css/face.css
@@ -406,6 +406,7 @@ input:focus {
     box-shadow: 0px 1px 1px 1px #d0d1d5;
     border-radius: 3px;
     display: inline-block;
+    cursor: pointer;
 }
 .foto-perfil2 {
     background: #2657eb;
@@ -413,7 +414,8 @@ input:focus {
     height: 50px;
     border: 3px solid #fff;
     box-shadow: 0px 1px 1px 1px #d0d1d5;
-    border-radius: 3px
+    border-radius: 3px;
+    cursor: pointer;
 }
 .foto-perfil22 {
     background: #2657eb;
@@ -689,6 +691,7 @@ a {
     width: 50px;
     height: 50px;
     background: #2657eb;
+    cursor: pointer;
 }
 .borda {
   border:1px solid #ccc;
@@ -758,7 +761,8 @@ a {
     margin: 0 auto;
     height: 88px;
     background: #2657eb;
-    border: 1px solid #ced0d4
+    border: 1px solid #ced0d4;
+    cursor: pointer;
 }
 .destaque-img {
     background: #2657eb;
@@ -824,6 +828,7 @@ button:hover {
     background: #2657eb;
     width: 40px;
     height: 40px;
+    cursor: pointer;
 }
 .post-info {
     width: 100%;
@@ -864,7 +869,8 @@ button:hover {
 .comenta-foto {
     width: 40px;
     height: 40px;
-    background: #2657eb
+    background: #2657eb;
+    cursor: pointer;
 }
 .comenta-inp {
     margin-left: 10px;
@@ -934,9 +940,13 @@ button:hover {
 .foto-perfil-p {
     width: 40px;
     height: 40px;
-    background: #2657eb
+    background: #2657eb;
+    cursor: pointer;
 }
-.destaquer {} .curt {
+.destaquer {
+
+}
+.curt {
     margin-left: 10px;
     font-size: 12px;
 }
