--- a/css/insta.css
+++ b/css/insta.css
@@ -355,7 +355,7 @@ button:hover {
   border-radius: 4px;
 }
 .btn-insta {
-  background: linear-gradient(to right, #F9B163, #C73984 , #6451C6);
+  background: #2657EB;
   border: none;
   color: #fff;
   height: 30px;
