--- a/css/face.css
+++ b/css/face.css
@@ -309,7 +309,7 @@ input:focus {
   border-radius: 4px;
 }
 .btn-insta {
-  background: linear-gradient(to right, #F9B163, #C73984 , #6451C6);
+  background: #2657EB;
   border: none;
   color: #fff;
   height: 30px;
