--- a/css/main.css
+++ b/css/main.css
@@ -89,10 +89,18 @@ flex:1
   display: flex;
 }
 .rpv {
-  max-width: 470px;
+
 }
 .rapa {
-  width: 340px
+  width: 380px;
+  -ms-zoom: 0.25;
+  -moz-transform: scale(0.25);
+  -moz-transform-origin: 0 0;
+  -o-transform: scale(0.25);
+  -o-transform-origin: 0 0;
+  -webkit-transform: scale(0.25);
+  -webkit-transform-origin: 0 0;
+  margin: 0 auto;
 }
 .ff img {}
 .criar {
